feat(personnel-service): Add RabbitMQ messaging and CORS updates
Introduce RabbitMQ-based messaging and related DTOs for the personnel service, centralize CORS configuration, and small API/entity adjustments.

Changes:
- Add RabbitMQ config (exchanges, queues, bindings, JSON converter) in RabbitMQConfig.
- Add MessagePublisher and EventConsumer to publish/consume personnel and task events.
- Add event DTOs: PersonnelStatusEvent and TaskAssignedEvent.
- Add MessagingTestController with endpoints to publish test/custom events and a messaging health check.
- Add a placeholder ExceptionHandler class.
- Update WebConfig to centralize and tighten CORS (allowed origin patterns, headers, methods) and provide a CorsFilter; remove per-controller @CrossOrigin annotations from multiple controllers.
- Prevent JSON serialization loops by adding @JsonIgnore to back-references in EmergencyContact and Skill entities.
- Document and tweak TaskClient (comments and helper method) and minor controller cleanups.
- Update pom.xml: add spring-boot-starter-actuator and bump springdoc-openapi version to 3.0.1.

Notes: EventConsumer contains commented example logic for updating personnel on task assignment; ExceptionHandler is currently empty and should be implemented later. MessagingTestController endpoints are intended for testing and should be secured or removed in production.