@@ -8,14 +8,13 @@ import org.springframework.web.filter.CorsFilter;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Web configuration for the Personnel Service.
  * Configures CORS (Cross-Origin Resource Sharing) policies to allow frontend applications
  * to access the API from different domains.
- * 
+ *
  * @author DISA Team
  * @version 1.0
  * @since 2026-02-21
@@ -23,54 +22,34 @@ import java.util.List;
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
 
-    /**
-     * Configures CORS mappings for all endpoints.
-     * Allows requests from specified origins with common HTTP methods.
-     * 
-     * @param registry the CORS registry
-     */
     @Override
     public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/api/**")
-                .allowedOrigins(
-                        "http://localhost:3000",
-                        "http://localhost:4200",
-                        "http://localhost:5173",
-                        "http://localhost:8080"
-                )
+        registry.addMapping("/**")
+                .allowedOriginPatterns("http://localhost:5173")
                 .allowedMethods("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
-                .allowedHeaders("*")
+                .allowedHeaders(
+                        "Origin",
+                        "Content-Type",
+                        "Accept",
+                        "Authorization",
+                        "Access-Control-Request-Method",
+                        "Access-Control-Request-Headers",
+                        "X-Requested-With"
+                )
                 .allowCredentials(true)
                 .maxAge(3600);
     }
 
-    /**
-     * Creates a CORS filter bean for fine-grained CORS configuration.
-     * This provides an alternative to the addCorsMappings method with more control.
-     * 
-     * @return CorsFilter configured with allowed origins, methods, and headers
-     */
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Allow specific origins (add your frontend URLs here)
-        config.setAllowedOriginPatterns(Arrays.asList(
-                "http://localhost:*",
-                "https://localhost:*",
-                "http://127.0.0.1:*"
-        ));
-        
-        // Allow credentials (cookies, authorization headers)
+
+        config.setAllowedOriginPatterns(List.of("http://localhost:5173"));
         config.setAllowCredentials(true);
-        
-        // Allow specific HTTP methods
-        config.setAllowedMethods(Arrays.asList(
+        config.setAllowedMethods(List.of(
                 "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"
         ));
-        
-        // Allow specific headers
-        config.setAllowedHeaders(Arrays.asList(
+        config.setAllowedHeaders(List.of(
                 "Origin",
                 "Content-Type",
                 "Accept",
@@ -79,21 +58,17 @@ public class WebConfig implements WebMvcConfigurer {
                 "Access-Control-Request-Headers",
                 "X-Requested-With"
         ));
-        
-        // Expose specific headers to the client
-        config.setExposedHeaders(Arrays.asList(
+        config.setExposedHeaders(List.of(
                 "Access-Control-Allow-Origin",
                 "Access-Control-Allow-Credentials",
                 "Authorization",
                 "Content-Disposition"
         ));
-        
-        // Cache preflight response for 1 hour
         config.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", config);
-        
+        source.registerCorsConfiguration("/**", config);
+
         return new CorsFilter(source);
     }
 }
